--- a/ece/templates/ece/home.html
+++ b/ece/templates/ece/home.html
@@ -1,4 +1,89 @@
-{% extends 'base.html' %}
-{% block body %}
-<h1>This is the home page</h1>
-{% endblock body %}
+<style>
+    body {
+        height: 100%!important;
+        padding: 0!important;
+        margin: 0!important;
+    }
+    
+    .img-responsive {
+        background-size: cover;
+    }
+    
+    @media(max-width: 968px) {
+        .img-responsive {
+            height: 500px!important;
+        }
+    }
+    
+    @media(min-width: 968px) {
+        .img-responsive {
+            height: 650px!important;
+        }
+    }
+</style>{% extends 'base.html' %} {% block body %}
+<section id="home">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8 p-0">
+                <div id="carouselExampleControls" class="carousel slide my-2" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(50).jpg" class="img-responsive img-fluid" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(52).jpg" class="img-responsive img-fluid" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(53).jpg" class="img-responsive img-fluid" alt="...">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+
+                <div class="d-flex align-items-center p-3 my-2 text-white-50 bg-dark rounded shadow-sm">
+                    <img class="mr-3" src="/docs/4.5/assets/brand/bootstrap-outline.svg" alt="" width="48" height="48">
+                    <div class="lh-100">
+                        <h6 class="mb-0 text-white lh-100">Bootstrap</h6>
+                        <small>Since 2011</small>
+                    </div>
+                </div>
+
+                <div class="my-3 p-3 bg-white rounded shadow-sm">
+                    <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
+                    <div class="media text-muted pt-3">
+                        <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"></rect><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+                        <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                            <strong class="d-block text-gray-dark">@username</strong> Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                        </p>
+                    </div>
+                    <div class="media text-muted pt-3">
+                        <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#e83e8c"></rect><text x="50%" y="50%" fill="#e83e8c" dy=".3em">32x32</text></svg>
+                        <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                            <strong class="d-block text-gray-dark">@username</strong> Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                        </p>
+                    </div>
+                    <div class="media text-muted pt-3">
+                        <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#6f42c1"></rect><text x="50%" y="50%" fill="#6f42c1" dy=".3em">32x32</text></svg>
+                        <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                            <strong class="d-block text-gray-dark">@username</strong> Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                        </p>
+                    </div>
+                    <small class="d-block text-right mt-3">
+                    <a href="#">All updates</a>
+                  </small>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+</section> {% endblock body %}
