static files added

--- a/ece/templates/ece/home.html
+++ b/ece/templates/ece/home.html
@@ -1,26 +1,4 @@
-<style>
-    body {
-        height: 100%!important;
-        padding: 0!important;
-        margin: 0!important;
-    }
-    
-    .img-responsive {
-        background-size: cover;
-    }
-    
-    @media(max-width: 968px) {
-        .img-responsive {
-            height: 500px!important;
-        }
-    }
-    
-    @media(min-width: 968px) {
-        .img-responsive {
-            height: 650px!important;
-        }
-    }
-</style>{% extends 'base.html' %} {% block body %}
+{% extends 'base.html' %} {% block body %}
 <section id="home">
     <div class="container-fluid">
         <div class="row">
