--- a/ece/templates/ece/home.html
+++ b/ece/templates/ece/home.html
@@ -1,6 +1,8 @@
-{% extends 'base.html' %} {% block body %}
+{% extends 'base.html' %}
+{% block home %}active{% endblock home %}
+ {% block body %}
 <section id="home">
-    <div class="container-fluid">
+    <div class="container-fluid bg-info">
         <div class="row">
             <div class="col-md-8 p-0">
                 <div id="carouselExampleControls" class="carousel slide my-2" data-ride="carousel">
@@ -27,15 +29,15 @@
             </div>
             <div class="col-md-4">
 
-                <div class="d-flex align-items-center p-3 my-2 text-white-50 bg-dark rounded shadow-sm">
+                <div class="d-flex align-items-center p-3 my-2 mb-0 text-white-50 bg-dark rounded shadow-sm">
                     <img class="mr-3" src="/docs/4.5/assets/brand/bootstrap-outline.svg" alt="" width="48" height="48">
                     <div class="lh-100">
-                        <h6 class="mb-0 text-white lh-100">Bootstrap</h6>
+                        <h6 class="mb-0 text-white lh-100">ECE Nit,Durgapur</h6>
                         <small>Since 2011</small>
                     </div>
                 </div>
 
-                <div class="my-3 p-3 bg-white rounded shadow-sm">
+                <div class="my-0 p-3 bg-white rounded shadow-sm">
                     <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
                     <div class="media text-muted pt-3">
                         <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"></rect><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
@@ -49,6 +51,13 @@
                             <strong class="d-block text-gray-dark">@username</strong> Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
                         </p>
                     </div>
+                    <div class="media text-muted pt-3">
+                        <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#e83e8c"></rect><text x="50%" y="50%" fill="#e83e8c" dy=".3em">32x32</text></svg>
+                        <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                            <strong class="d-block text-gray-dark">@username</strong> Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                        </p>
+                    </div>
+                 
                     <div class="media text-muted pt-3">
                         <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#6f42c1"></rect><text x="50%" y="50%" fill="#6f42c1" dy=".3em">32x32</text></svg>
                         <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
