--- a/ece/templates/ece/login.html
+++ b/ece/templates/ece/login.html
@@ -1,10 +1,12 @@
-
+{% extends 'base.html' %}
+ {% block login %}active{% endblock login %}
 {% load static %}
 
 
 {% block body %}
 <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
 
+<div class='container my-3 ml-3'>
 <form method="post">
 	{{message}}<br>
 	
@@ -13,7 +15,7 @@
   Password: <input type="password" name="password" />
   <br />
   <button type="submit" class="btn btn-success">Log In!</button>
-
+</div>
 
 
 </form>
